--- a/index.html
+++ b/index.html
@@ -114,8 +114,8 @@
         <div class="p-name">Oka Mugianto</div>
         <div class="p-sm">
           <a href="#"><i class="fa fa-facebook"></i></a>
-          <a href="https://www.instagram.com/okamugianto/"><i class="fa fa-instagram"></i></a>
-          <a href="https://twitter.com/oka_oxz"><i class="fa fa-twitter"></i></a>
+          <a href="#"><i class="fa fa-instagram"></i></a>
+          <a href="#"><i class="fa fa-twitter"></i></a>
         </div>
      </div>
 
